# robometry

./: .gitignore  BufferConfig_8h.html  BufferManager_8h.html  Buffer_8h.html  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  README.md  README_8md.html  Record_8h.html  TelemetryDeviceDumper_8cpp.html  TelemetryDeviceDumper_8h.html  TreeNode_8h.html  annotated.html  classrobometry_1_1Buffer.html  classrobometry_1_1BufferManager.html  classrobometry_1_1TelemetryDeviceDumper.html  classrobometry_1_1TreeNode.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_7f69db962664e74476ec252e7b4a64bc.html  dir_ea6edcfb0a6ced1312ac4a3d11ec7b4a.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  magnitude__frequency__table_8md.html  md__home_runner_work_robometry_robometry_CHANGELOG.html  md__home_runner_work_robometry_robometry_docs_pages_magnitude_frequency_table.html  modules.html  namespaceiCub.html  namespacerobometry.html  namespaces.html  namespacestd.html  namespaceyarp.html  namespaceyarp_1_1dev.html  namespaceyarp_1_1os.html  pages.html  searchdata-v2.js  structrobometry_1_1BufferConfig.html  structrobometry_1_1BufferInfo.html  structrobometry_1_1ChannelInfo.html  (+4 more)
docs/: Doxyfile-mcss.in  Doxyfile.in  conf-master.py  conf.py.in  config.toml  generate_documentation_files.py  generate_website.py  magnitude_frequency_table.md
src/: CMakeLists.txt
src/examples/: CB_to_matfile_example.cpp  CMakeLists.txt  circular-buffer-example.cpp  circular_buffer_record_example.cpp  matio_matrix_example.cpp  matio_timeseries_example.cpp  matio_vector_example.cpp  robometry_buffer_example.cpp  robometry_buffer_manager_conf_file.cpp  robometry_buffer_periodic_save.cpp  telemetry_buffer_example.cpp  telemetry_buffer_manager_conf_file.cpp  telemetry_buffer_manager_example.cpp  telemetry_buffer_periodic_save.cpp
src/examples/conf/: test_json.json
src/libYARP_telemetry/: CMakeLists.txt
src/libYARP_telemetry/src/: CMakeLists.txt
src/libYARP_telemetry/src/yarp/telemetry/: Buffer.h  BufferConfig.cpp  BufferConfig.h  BufferManager.h  Record.h  Test.cpp  Test.h
src/libYARP_telemetry/src/yarp/telemetry/experimental/: Buffer.cpp  Buffer.h  BufferConfig.cpp  BufferConfig.h  BufferManager.h  Record.h  TreeNode.h  api.h
src/librobometry/: CMakeLists.txt
src/librobometry/include/robometry/: Buffer.h  BufferConfig.h  BufferManager.h  Record.h  TreeNode.h  api.h
src/librobometry/src/: Buffer.cpp  BufferConfig.cpp  BufferManager.cpp
src/telemetryDeviceDumper/: CMakeLists.txt  TelemetryDeviceDumper.cpp  TelemetryDeviceDumper.h
src/telemetryDeviceDumper/app/: launch-telemetryDeviceDumper-icub_sim.xml  telelmetryDeviceDumper.xml  telemetryDeviceDumper.xml  telemetryDeviceDumper_sim.xml  yarprobotinterface.ini
test/: BufferManagerTest.cpp  CMakeLists.txt
v1.0.0/: BufferConfig_8h.html  BufferManager_8h.html  Buffer_8h.html  CHANGELOG_8md.html  README_8md.html  Record_8h.html  TelemetryDeviceDumper_8cpp.html  TelemetryDeviceDumper_8h.html  TreeNode_8h.html  annotated.html  classrobometry_1_1Buffer.html  classrobometry_1_1BufferManager.html  classrobometry_1_1TelemetryDeviceDumper.html  classrobometry_1_1TreeNode.html  dir_788bd5f64a23e722c84e1dd13f15e9c0.html  dir_f2ec3ede2b72aa087dd67e27ed783248.html  files.html  index.html  md__home_runner_work_robometry_robometry_docs_robometry_CHANGELOG.html  modules.html  namespacerobometry.html  namespaces.html  namespacestd.html  namespaceyarp.html  namespaceyarp_1_1dev.html  namespaceyarp_1_1os.html  pages.html  searchdata-v2.js  structrobometry_1_1BufferConfig.html  structrobometry_1_1BufferInfo.html  structrobometry_1_1ChannelInfo.html  structrobometry_1_1Record.html  structrobometry_1_1TelemetryDeviceDumperSettings.html  structrobometry_1_1matioCppCanConcatenate.html  structrobometry_1_1matioCppCanConcatenate_3_01T_00_01typename_01std_1_1enable__if__t_3_01matioCp29b484304409793d662bc92c0392bee3.html
v1.1.0/: BufferConfig_8h.html  BufferManager_8h.html  Buffer_8h.html  CHANGELOG_8md.html  README_8md.html  Record_8h.html  TelemetryDeviceDumper_8cpp.html  TelemetryDeviceDumper_8h.html  TreeNode_8h.html  annotated.html  classrobometry_1_1Buffer.html  classrobometry_1_1BufferManager.html  classrobometry_1_1TelemetryDeviceDumper.html  classrobometry_1_1TreeNode.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_7f69db962664e74476ec252e7b4a64bc.html  dir_ea6edcfb0a6ced1312ac4a3d11ec7b4a.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  magnitude__frequency__table_8md.html  md__home_runner_work_robometry_robometry_docs_robometry_CHANGELOG.html  md__home_runner_work_robometry_robometry_docs_robometry_docs_pages_magnitude_frequency_table.html  modules.html  namespacerobometry.html  namespaces.html  namespacestd.html  namespaceyarp.html  namespaceyarp_1_1dev.html  namespaceyarp_1_1os.html  pages.html  searchdata-v2.js  structrobometry_1_1BufferConfig.html  structrobometry_1_1BufferInfo.html  structrobometry_1_1ChannelInfo.html  structrobometry_1_1Record.html  structrobometry_1_1TelemetryDeviceDumperSettings.html  structrobometry_1_1matioCppCanConcatenate.html  structrobometry_1_1matioCppCanConcatenate_3_01T_00_01typename_01std_1_1enable__if__t_3_01matioCp29b484304409793d662bc92c0392bee3.html
xml/: BufferConfig_8h.xml  BufferManager_8h.xml  Buffer_8h.xml  CHANGELOG_8md.xml  README_8md.xml  Record_8h.xml  TelemetryDeviceDumper_8cpp.xml  TelemetryDeviceDumper_8h.xml  TreeNode_8h.xml  classrobometry_1_1BufferManager.xml  classrobometry_1_1TelemetryDeviceDumper.xml  classrobometry_1_1TreeNode.xml  dir_49e56c817e5e54854c35e136979f97ca.xml  dir_7f69db962664e74476ec252e7b4a64bc.xml  dir_ea6edcfb0a6ced1312ac4a3d11ec7b4a.xml  dir_ef3b2545113449f8f25e623a543d64e3.xml  index.xml  indexpage.xml  magnitude__frequency__table_8md.xml  md__home_runner_work_robometry_robometry_CHANGELOG.xml  md__home_runner_work_robometry_robometry_docs_pages_magnitude_frequency_table.xml  namespaceiCub.xml  namespacerobometry.xml  namespaceyarp_1_1dev.xml  namespaceyarp_1_1os.xml  structrobometry_1_1BufferConfig.xml  structrobometry_1_1BufferInfo.xml  (+2 more)
(+45 files in other folders)
